# CMakeList.txt : CMake project for typed_count, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (typed_count "typed_count.cpp" "typed_count.h")

# TODO: Add tests and install targets if needed.
